<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.tonych.busforgp.schedule">
    <item android:id="@+id/action_settings3" android:title="@string/action_settings3"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_settings4" android:title="@string/action_settings4"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_settings5" android:title="@string/action_settings5"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
